# aegis

./: .gitignore  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md
backend/: .env.example  README.md  pyproject.toml
backend/aegis/: main.py
backend/aegis/config/: settings.py
backend/aegis/models/: nvidia.py
backend/aegis/orchestrator/: analyzer.py
backend/aegis/schemas/: analysis.py  attack_surface.py  claims.py  dependencies.py  threat_model.py  validation.py
backend/aegis/security/: attack_surface.py  authorization.py  bandit.py  claim_adapter.py  config_secrets.py  osv.py  (+14 more)
backend/tests/: test_analysis_claim_endpoint.py  test_analysis_claim_response.py  test_attack_surface.py  test_claim_adapter.py  test_claim_graph_hardening.py  test_claim_identity_v2.py  test_claim_schemas.py  test_command_injection_claim_lifecycle.py  test_command_injection_local_patch.py  test_dependency_files.py  test_dynamic_claim_evidence.py  test_fix_verification.py  test_fix_verification_endpoint.py  test_scanner_orchestrator.py  test_secret_engine_configuration.py  test_text_utils.py  test_threat_model.py  test_threat_model_endpoint.py  test_validation_authorization.py  test_validation_authorization_endpoint.py  test_validation_claim_linkage.py  test_validation_evidence.py  test_validation_evidence_endpoint.py  test_validation_plan.py  test_validation_plan_endpoint.py  test_validation_replay.py  test_validation_replay_endpoint.py  test_validation_replay_orchestrator.py  test_validation_replay_orchestrator_endpoint.py  test_validation_runner.py  test_validation_runner_endpoint.py
(+39 files in other folders)
