[build-system]
requires = ["setuptools>=83", "wheel>=0.47"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis-security-backend"
version = "0.1.0"
description = "Evidence-first secure fix verification backend for Aegis."
readme = "README.md"
requires-python = ">=3.14,<3.15"
license = "Apache-2.0"
authors = [
  { name = "Melike" }
]
dependencies = [
  "fastapi>=0.139,<1",
  "pydantic>=2.13,<3",
  "pydantic-settings>=2,<3",
  "PyYAML>=6,<7",
  "python-dotenv>=1,<2",
  "openai>=2,<3",
  "requests>=2.32,<3",
  "httpx>=0.28,<1",
  "uvicorn>=0.51,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=9,<10",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["aegis*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
